# banky

./: .env.example  .gitignore  .replit  README.md  build-production.sh  ecosystem.config.js  install.sh  package-lock.json  package.json  pyproject.toml  replit.md  start.sh  vite.config.ts
Archivezipzip-1-1zipzip/: .replit  cookies.txt  package.json
admin-client/: index.html  package-lock.json  package.json  vite.config.ts
attached_assets/: Pasted--PostgreSQL-Client-Authentication-Configuration-File--1_1772133178306.txt  Pasted--Service-restarts-being-deferred-etc-needrestart-restar_1771837832696.txt  Pasted--Step-4-5-Installing-Python-backend-dependencies-SKIP-V_1771752160597.txt  Pasted--async-with-original-context-app-as-maybe-original-stat_1772305108053.txt  Pasted--bin-bash-set-e-GREEN-033-0-32m-YELLOW-033-1-33m-RED-03_1771751559464.txt  Pasted--bin-bash-set-e-GREEN-033-0-32m-YELLOW-033-1-33m-RED-03_1771867153374.txt  Pasted--bin-bash-set-e-GREEN-033-0-32m-YELLOW-033-1-33m-RED-03_1772133939556.txt  Pasted--root-pm2-logs-bankykit-api-error-log-last-15-lines-0-b_1771855028339.txt  Pasted--root-pm2-logs-bankykit-demo-api-error-log-last-15-line_1771953623836.txt  Pasted--root-vmi3102280-var-www-bankykit-admin-pm2-logs-bankyk_1771850968364.txt  Pasted-4-bankykit-Migration-needed-db-version-1-current-26-4-b_1772137014291.txt  Pasted-4-bankykit-api-ERROR-Exception-in-ASGI-application-4-ba_1772137414394.txt  Pasted-7-bankykit-e-is-read-created-at-VALUES-id-s-notificatio_1771954352936.txt  Pasted-mac-macs-MacBook-Pro-android-flutter-build-apk-release-_1771944515499.txt  (+23 more)
(+452 files in other folders)
